--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     flex-shrink: 0;
     border-radius: 6px;
     background: #2F3136;
-    margin-left: 18.75rem;
+    
     margin-top: 6.25rem;
     margin-bottom: 6.25rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .titulo{
@@ -65,11 +67,15 @@ body{
     font-size: 5px;
     font-weight: 700; 
     padding: 15px;
+    margin-bottom: 10px;
+    transform: translate(40px, 0); 
 }
 
 
-.rectangle10 img{
 
+.rectangle10 img{
+    transform: translate(0px, -38px); 
+   
 }
 
 
@@ -78,5 +84,14 @@ img {
     margin: 0 auto;
     margin-top: 25px;
   }
+
+  .rectangle10-imagens{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-around;
+    transform: translate(0px, -80px); 
+  }
+    
 
   
